# aeris

./: .gitignore  README.md  package-lock.json  package.json
apps/web/: .env.local.example  next.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/market/: page.tsx
apps/web/src/components/: AgentCard.tsx  LiveFeed.tsx  PaymentModal.tsx  PaymentModalPrivy.tsx  WalletButton.tsx  WalletButtonPrivy.tsx
apps/web/src/hooks/: useAerisPay.ts
apps/web/src/providers/: AerisProviders.tsx
programs/aeris/: Anchor.toml  package-lock.json  package.json
programs/aeris/programs/aeris/: Cargo.toml
programs/aeris/programs/aeris/src/: lib.rs
programs/aeris/tests/: aeris.ts
scripts/: agent-demo.ts  fund-usdc.ts  package-lock.json  package.json  setup-wallets.ts  test-transfer.ts  tsconfig.json
