[package]
name = "aeris"
version = "0.1.0"
description = "Aeris payment program — permissioned USDC transfer with spend policies"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeris"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
